# excavation-site-alpha

./: Cargo.toml  README.md  credits.txt  ideas.txt
assets/sounds/: engineer_gaming.flp
release/: Makefile  esa.wasm  index.html
release/assets/sounds/: engineer_gaming.flp
src/: assets.rs  drawutils.rs  main.rs
src/modes/: mod.rs
src/modes/denoument/: mod.rs
src/modes/logo/: mod.rs
src/modes/playing/: blocks.rs  mod.rs
src/modes/rules/: mod.rs
src/modes/title/: mod.rs
