[package]
name = "omegaquad"
version = "0.1.0"
authors = ["gamma-delta <29877714+gamma-delta@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cogs-gamedev = "0.1.6"
crossbeam = "0.8.0"
getrandom = { version = "0.2.2", features = ["custom"] }
itertools = "0.10.0"
macroquad = "0.3.0"
once_cell = "1.7.2"
quad-rand = { version = "0.2.1", features = ["rand"] }
rand = "0.8.3"

[profile.dev.package.'*']
opt-level = 3
